# event-driven-microservices-with-flask

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yaml  mypy.ini  pyproject.toml  setup.cfg
src/: container.py
src/shared/core/: aggregate_root.py  application_error.py  domain_entity.py  invalid_domain_entity_error.py
src/shared/core/bus/event/: domain_event.py  event_bus.py
src/shared/infrastructure/bus/event/: kafka_event_bus.py  kafka_producer.py  kafka_topic_creator.py
src/shared/infrastructure/config/: config.py
src/shared/infrastructure/entities/: core_entity.py  user_entity.py
src/shared/infrastructure/persistence/: database_handler.py  database_mapper.py
src/shared/infrastructure/rest/: base_controller.py  error_handler.py
